--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,14 +21,14 @@ if (!gradlePropertiesFile.exists()) {
 props.load(new FileInputStream(gradlePropertiesFile))
 
 android {
-    compileSdkVersion Android.compileSdkVersion
-    buildToolsVersion Android.buildToolsVersion
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         versionCode 61
         versionName "1.40.0"
-        minSdkVersion Android.minSdkVersion
-        targetSdkVersion Android.targetSdkVersion
+        minSdkVersion 29
+        targetSdkVersion 29
         archivesBaseName = "Fahrplan-$versionName"
 
         // Build information
@@ -54,20 +54,6 @@ android {
         }
     }
 
-    signingConfigs {
-        ccc35c3 {
-            storeFile file(props['signing.ccc35c3-release.keystoreFilePath'])
-            storePassword props['signing.ccc35c3-release.keystorePassword']
-            keyAlias props['signing.ccc35c3-release.keyAlias']
-            keyPassword props['signing.ccc35c3-release.keyPassword']
-        }
-        cccamp2019 {
-            storeFile file(props['signing.cccamp2019-release.keystoreFilePath'])
-            storePassword props['signing.cccamp2019-release.keystorePassword']
-            keyAlias props['signing.cccamp2019-release.keyAlias']
-            keyPassword props['signing.cccamp2019-release.keyPassword']
-        }
-    }
 
     def defaultDimension = "default"
     flavorDimensions defaultDimension
@@ -76,43 +62,22 @@ android {
         ccc35c3 {
             dimension defaultDimension
             applicationId "info.metadude.android.congress.schedule"
-            signingConfig signingConfigs.ccc35c3
+            //signingConfig signingConfigs.ccc35c3
             buildConfigField "String", "SCHEDULE_URL", '"https://raw.githubusercontent.com/voc/35C3_schedule/master/everything.schedule.xml"'
-            buildConfigField "String", "EVENT_URL", '"https://events.ccc.de/congress/2018/Fahrplan/events/%1$s.html"'
-            buildConfigField "String", "SERVER_BACKEND_TYPE", '"frab"'
-            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_YEAR", "2018"
-            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_MONTH", "12"
-            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_DAY", "27"
-            buildConfigField "int", "SCHEDULE_LAST_DAY_END_YEAR", "2018"
-            buildConfigField "int", "SCHEDULE_LAST_DAY_END_MONTH", "12"
-            buildConfigField "int", "SCHEDULE_LAST_DAY_END_DAY", "31"
-            buildConfigField "boolean", "SHOW_APP_DISCLAIMER", "false"
-            buildConfigField "boolean", "ENGAGE_C3NAV_APP_INSTALLATION", "true"
-            buildConfigField "boolean", "ENGAGE_GOOGLE_BETA_TESTING", "true"
-            buildConfigField "boolean", "ENGAGE_GOOGLE_PLAY_RATING", "true"
-            buildConfigField "String", "TRACE_DROID_EMAIL_ADDRESS", '"tobias.preuss+35c3@googlemail.com"'
-            buildConfigField "String", "SCHEDULE_FEEDBACK_URL", '"https://frab.cccv.de/en/35C3/public/events/%s/feedback/new"'
-        }
-        cccamp2019 {
-            dimension defaultDimension
-            applicationId "info.metadude.android.cccamp.schedule"
-            versionName "1.40.0-CCCamp-Edition"
-            signingConfig signingConfigs.cccamp2019
-            buildConfigField "String", "SCHEDULE_URL", '"https://data.c3voc.de/camp2019/everything.schedule.xml"'
-            buildConfigField "String", "EVENT_URL", '"http://events.ccc.de/camp/2019/Fahrplan/events/%1$s.html"'
+            buildConfigField "String", "EVENT_URL", '""' // https://events.ccc.de/congress/2018/Fahrplan/events/%1$s.html
             buildConfigField "String", "SERVER_BACKEND_TYPE", '"frab"'
             buildConfigField "int", "SCHEDULE_FIRST_DAY_START_YEAR", "2019"
-            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_MONTH", "8"
-            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_DAY", "21"
+            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_MONTH", "10"
+            buildConfigField "int", "SCHEDULE_FIRST_DAY_START_DAY", "04"
             buildConfigField "int", "SCHEDULE_LAST_DAY_END_YEAR", "2019"
-            buildConfigField "int", "SCHEDULE_LAST_DAY_END_MONTH", "8"
-            buildConfigField "int", "SCHEDULE_LAST_DAY_END_DAY", "26"
+            buildConfigField "int", "SCHEDULE_LAST_DAY_END_MONTH", "10"
+            buildConfigField "int", "SCHEDULE_LAST_DAY_END_DAY", "06"
             buildConfigField "boolean", "SHOW_APP_DISCLAIMER", "false"
             buildConfigField "boolean", "ENGAGE_C3NAV_APP_INSTALLATION", "false"
-            buildConfigField "boolean", "ENGAGE_GOOGLE_BETA_TESTING", "true"
-            buildConfigField "boolean", "ENGAGE_GOOGLE_PLAY_RATING", "true"
-            buildConfigField "String", "TRACE_DROID_EMAIL_ADDRESS", '"tobias.preuss+camp2019@googlemail.com"'
-            buildConfigField "String", "SCHEDULE_FEEDBACK_URL", '"https://frab.cccv.de/en/camp2019/public/events/%s/feedback/new"'
+            buildConfigField "boolean", "ENGAGE_GOOGLE_BETA_TESTING", "false"
+            buildConfigField "boolean", "ENGAGE_GOOGLE_PLAY_RATING", "false"
+            buildConfigField "String", "TRACE_DROID_EMAIL_ADDRESS", '""'
+            buildConfigField "String", "SCHEDULE_FEEDBACK_URL", '""' //https://frab.cccv.de/en/35C3/public/events/%s/feedback/new
         }
     }
 
