--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath GradlePlugins.gradleVersions
         classpath GradlePlugins.sonarQubeGradle
         classpath GradlePlugins.kotlinGradle
+        classpath 'com.android.tools.build:gradle:3.5.0'
     }
 }
 
